--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="yeuthich">Yêu thích</string>
     <string name="thongbao">Thông báo</string>
     <string name="toi">Tôi</string>
+    <string name= "menu">Menu</string>
+    <string name="thongke">Thống kê</string>
 </resources>
